{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 9,
  "lineage": "2d48eccb-21f0-0270-d7f6-21a59dc3465e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "epicbook_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05cf1e9f73fbad2e2",
            "arn": "arn:aws:ec2:us-east-1:428101261622:instance/i-0810620b8823ce316",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0810620b8823ce316",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dmi-cohort2-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ee13493dc112996d"
              }
            ],
            "primary_network_interface_id": "eni-0ee13493dc112996d",
            "private_dns": "ip-10-0-1-221.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.221",
            "public_dns": "ec2-52-54-106-126.compute-1.amazonaws.com",
            "public_ip": "52.54.106.126",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-091ee332c0da0dbbe",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba8e87a159312401",
            "tags": {
              "Name": "epicbook-deployment"
            },
            "tags_all": {
              "Name": "epicbook-deployment"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06980ffd015e7e2fd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "428101261622",
            "id": "i-0810620b8823ce316",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.epicbook_sg",
            "aws_subnet.epicbook_public_subnet",
            "aws_vpc.epicbook_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "epicbook_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428101261622:internet-gateway/igw-01dd2c54ca55f4df6",
            "id": "igw-01dd2c54ca55f4df6",
            "owner_id": "428101261622",
            "region": "us-east-1",
            "vpc_id": "vpc-06ac8879cfb92c3ff"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "428101261622",
            "id": "igw-01dd2c54ca55f4df6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.epicbook_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "epicbook_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428101261622:route-table/rtb-0ed0dd076d08bb243",
            "id": "rtb-0ed0dd076d08bb243",
            "owner_id": "428101261622",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01dd2c54ca55f4df6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ac8879cfb92c3ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "428101261622",
            "id": "rtb-0ed0dd076d08bb243",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.epicbook_igw",
            "aws_vpc.epicbook_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "epicbook_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070b14e07990c0fbf",
            "region": "us-east-1",
            "route_table_id": "rtb-0ed0dd076d08bb243",
            "subnet_id": "subnet-0ba8e87a159312401"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "428101261622",
            "id": "rtbassoc-070b14e07990c0fbf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.epicbook_igw",
            "aws_route_table.epicbook_rt",
            "aws_subnet.epicbook_public_subnet",
            "aws_vpc.epicbook_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "epicbook_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428101261622:security-group/sg-06980ffd015e7e2fd",
            "description": "Allow web traffic and restricted SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06980ffd015e7e2fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "65.34.64.90/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "epicbook-deployment-sg",
            "name_prefix": "",
            "owner_id": "428101261622",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ac8879cfb92c3ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "428101261622",
            "id": "sg-06980ffd015e7e2fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.epicbook_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "epicbook_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428101261622:subnet/subnet-0ba8e87a159312401",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba8e87a159312401",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "428101261622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-06ac8879cfb92c3ff"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "428101261622",
            "id": "subnet-0ba8e87a159312401",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.epicbook_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "epicbook_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428101261622:vpc/vpc-06ac8879cfb92c3ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07540c69a30bc741e",
            "default_route_table_id": "rtb-0d8c5032123453205",
            "default_security_group_id": "sg-0f69f010c46489c6a",
            "dhcp_options_id": "dopt-0db29b4ba91de514d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ac8879cfb92c3ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d8c5032123453205",
            "owner_id": "428101261622",
            "region": "us-east-1",
            "tags": {
              "Name": "epicbook-custom-vpc"
            },
            "tags_all": {
              "Name": "epicbook-custom-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "428101261622",
            "id": "vpc-06ac8879cfb92c3ff",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}